--- a/src/App.css
+++ b/src/App.css
@@ -242,7 +242,7 @@ body{
 
 
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
-    background-color: #0d6efd !important;
+    background-color: #121213 !important;
 }
 
   
