--- a/src/App.css
+++ b/src/App.css
@@ -47,33 +47,6 @@ body{
 }
 
 
-.card {
-    border-radius: 5px;
-    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
-    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
-    border: none;
-    margin-bottom: 30px;
-}
-
-.card .card-block {
-    padding: 25px;
-}
-
-.order-card i {
-    font-size: 26px;
-}
-
-.f-left {
-    float: left;
-}
-
-.f-right {
-    float: right;
-}
-
-
-
-
 
 
 
@@ -280,6 +253,7 @@ body{
         border-radius: .25rem;
         margin-bottom: 1.5rem;
         box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
+        width: 100%;
     }
     .bg-gradient-scooter {
         background: #17ead9;
@@ -586,6 +560,7 @@ body{
 
 
   .css-3bmhjh-MuiPaper-root-MuiPopover-paper {
+
     color: rgba(0, 0, 0, 0.87);
     -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
